update styles to prevent cutoff on ios

--- a/kt.css
+++ b/kt.css
@@ -6,7 +6,7 @@ div.lbox {
   border-style: solid;
   border-color: #d0d0d0;
   width: 5em;
-  height: 5em;
+  height: 6em;
   position: relative;
   display: inline-block;
   overflow: hidden;
@@ -34,7 +34,7 @@ div.meaning,div.onyomi,div.kunyomi {
   text-align: center;
   font-size: 8pt;
   overflow: hidden;
-  height: 1em;
+  height: 1.5em;
 }
 div.onyomi { color: purple; }
 div.kunyomi { color: brown; }
